# T.K-AI-Humanoid-Book

./: .gitignore  QWEN.md  package-lock.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
history/prompts/004-ai-robot-brain-vla/: 10-ai-robot-brain-vla-implementation-plan.plan.prompt.md  12-ai-robot-brain-vla-tasks.tasks.prompt.md  (+2 more)
my-book/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
my-book/docs/: intro.md
my-book/my-book/: docusaurus.config.ts  package-lock.json
my-book/src/api/: actions.py  (+3 more)
my-book/tests/: test_unit.py
specs/001-ros2-humanoid-module/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ros2-humanoid-module/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-digital-twin-robotics/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-ai-robot-brain-vla/: data-model.md  plan.md  research.md  spec.md  tasks.md
src/digital_twin_gazebo/: CMakeLists.txt  package.xml
src/digital_twin_gazebo/config/: perception.yaml  physics.yaml  visualization.yaml
src/digital_twin_gazebo/launch/: full_integration.launch.py  physics_world.launch.py  sensor_world.launch.py
src/digital_twin_gazebo/models/: enhanced_humanoid.urdf  simple_humanoid.urdf
src/digital_twin_gazebo/scripts/: ai_validation_exercise.py  data_retention_system.py  digital_twin_tester.py  error_handler.py  perception_flow_processor.py  performance_optimizer.py
src/digital_twin_gazebo/worlds/: simple_world.sdf
(+60 files in other folders)
